--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "prettier": "^2.3.2",
     "prettier-eslint": "^13.0.0",
@@ -37,6 +39,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
+    "postcss-pxtorem": "5.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
